deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-intent-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fastapi-intent-app
  template:
    metadata:
      labels:
        app: fastapi-intent-app
    spec:
      containers:
      - name: fastapi-container
        image: image-registry.openshift-image-registry.svc:5000/$(PROJECT)/fastapi-intent-app:latest
        ports:
        - containerPort: 8000
        command: ["uvicorn"]
        args: ["main:app", "--host", "0.0.0.0", "--port", "8000"]
